fix: correct docs and travis for spake2
* Docs missed a prerequisite install
* travis failed trying to compile a wasm package
* update to latest nightly

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: rust
 
 rust:
     - stable
+    - nightly-2018-07-08
 
 cache: cargo
+
+script:
+    - cargo build --all --exclude=pairsona_spake2
 
 notifications:
   email: false
