--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: rust
 
 rust:
     - stable
+    - nightly
+
+matrix:
+    allow_failures:
+        - rust: nightly
+    fast_finish: true
 
 cache: cargo
 
