fix: correct docs and travis for spake2 (#6); r=rfk

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,17 @@ language: rust
 
 rust:
     - stable
+    - nightly
+
+matrix:
+   allow_failures:
+       - rust: nightly
+   fast_finish: true
 
 cache: cargo
+
+script:
+    - cargo build --all --exclude=pairsona_spake2
 
 notifications:
   email: false
