--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,3 @@
 [workspace]
-members = ["linkserver", "chatserver", "spake2_demo"]
+#members = ["linkserver", "chatserver", "spake2_demo"]
+members = ["linkserver", "chatserver"]
