--- a/channelserver/Cargo.toml
+++ b/channelserver/Cargo.toml
@@ -3,6 +3,10 @@ name = "channelserver"
 version = "0.1.0"
 authors = ["jr conlin<me+src@jrconlin.com"]
 
+[build]
+jobs=8
+incremental=true
+
 [dependencies]
 config = "0.9.0"
 failure = "0.1.1"
@@ -26,5 +30,5 @@ slog-stdlog = "3.0.2"
 slog-term = "2.4.0"
 serde_derive = "1.0.69"
 
-actix = "0.5"
-actix-web = "^0.6"
+actix = "0.7"
+actix-web = "0.7.3"
