--- a/channelserver/Cargo.toml
+++ b/channelserver/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "chatserver"
-version = "0.1.0"
+name = "channelserver"
+version = "0.2.1"
 authors = ["jr conlin<me+src@jrconlin.com"]
 
 [dependencies]
+config = "0.9.0"
+failure = "0.1.1"
 rand = "*"
 bytes = "0.4"
 byteorder = "1.1"
@@ -24,5 +26,5 @@ slog-stdlog = "3.0.2"
 slog-term = "2.4.0"
 serde_derive = "1.0.69"
 
-actix = "0.5"
-actix-web = "^0.6"
+actix = "0.7"
+actix-web = "0.7.3"
