f update README.md, fix test_chan to test in one pass.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,2 @@
 [workspace]
-#members = ["linkserver", "chatserver", "spake2_demo"]
-members = ["linkserver", "channelserver"]
+members = ["channelserver"]
