--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
 
 
 script:
-    - cargo build --all --exclude=pairsona_spake2
+    - cargo build --all --exclude=spake2_demo
 
 notifications:
   email: false
