--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: rust
-sudo: false
+sudo: required
 cache: cargo
+install:
+- make install
 
 rust:
     - stable
@@ -18,6 +20,8 @@ matrix:
 
 script:
     - cargo build --all --exclude=spake2_demo
+    - cargo test --all --exclude=spake2_demo
+    - make test
 
 notifications:
   email: false
