--- a/channelserver/Cargo.toml
+++ b/channelserver/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "channelserver"
 version = "1.0.0"
-authors = ["jr conlin<src+pairsona@jrconlin.com"]
+license = "MPL-2.0"
+authors = [
+    "jr conlin<src+pairsona@jrconlin.com",
+    "Phil Jenvey <pjenvey@underboss.org",
+    "Donovan Preston <donovanpreston@gmail.com>"
+    ]
 edition = "2018"
 
 [dependencies]
