f update mmdb code

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,7 @@ jobs:
             cargo audit \
               --ignore RUSTSEC-2020-0049 \
               --ignore RUSTSEC-2020-0048 \
-              --ignore RUSTSEC-2018-0007 \
-              
+              --ignore RUSTSEC-2018-0007
             cargo fmt -- --check
             cargo clippy --all -- -D warnings
       - run:
