--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,52 @@
-[workspace]
-members = ["channelserver"]
+[package]
+name = "channelserver"
+version = "1.1.0"
+license = "MPL-2.0"
+authors = [
+    "jr conlin<src+pairsona@jrconlin.com",
+    "Phil Jenvey <pjenvey@underboss.org",
+    "Donovan Preston <donovanpreston@gmail.com>"
+    ]
+edition = "2021"
+
+[dependencies]
+base64 = "0.21"
+config = "0.13"
+failure = "0.1"
+rand = "0.8"
+bytes = "1.1"
+byteorder = "1.3"
+futures = "0.3"
+tokio-io = "0.1"
+tokio-core = "0.1"
+env_logger = "0.10"
+
+uuid = { version = "1.1", features = ["serde", "v4"] }
+
+cadence = "0.29"
+slog = {version="2.5", features=["release_max_level_debug"]}
+slog-async = "2.5.0"
+slog-json = "2.3.0"
+slog-scope = "4.3"
+slog-stdlog = "4.0"
+slog-term = "2.6"
+slog-mozlog-json = "0.1.0"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+
+actix-rt = "2.8"
+actix = "0.13"
+actix-web = "4.3"
+actix-web-actors = "4.2"
+actix-files = "0.6"
+
+reqwest = "0.11"
+openssl = "0.10"
+
+maxminddb = "0.23"
+ipnet = "2.2"
+
+#vuln
+http = "^0.2"
+smallvec = "^1"
