--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,6 @@ jobs:
       - run:
           name: Do integration and unit tests
           command: |
-            pushd channelserver
             cargo test --all --verbose -- --nocapture
   build:
     docker:
@@ -73,7 +72,7 @@ jobs:
             "$CIRCLE_TAG" \
             "$CIRCLE_PROJECT_USERNAME" \
             "$CIRCLE_PROJECT_REPONAME" \
-            "$CIRCLE_BUILD_URL" > channelserver/version.json
+            "$CIRCLE_BUILD_URL" > version.json
 
       - run:
           name: Build Docker image
