--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,10 +37,8 @@ jobs:
             rustc --version
       - run:
           name: Do rust checks
-          # ignoring RUSTSEC-2020-0041 -> sentry fix not yet available
-          # ignoring RUSTSEC-2020-0049 -> fix is beta code
           command: |
-            cargo audit --ignore RUSTSEC-2020-0041 --ignore RUSTSEC-2020-0049
+            cargo audit
             cargo clippy --all -- -D warnings
       - run:
           name: Do integration and unit tests
