--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "channelserver"
-version = "1.2.0"
+version = "1.2.1"
 license = "MPL-2.0"
 authors = [
     "jr conlin<src+pairsona@jrconlin.com",
@@ -8,6 +8,7 @@ authors = [
     "Donovan Preston <donovanpreston@gmail.com>",
 ]
 edition = "2021"
+rust-version = "1.76"
 
 [dependencies]
 base64 = "0.22"
@@ -15,13 +16,13 @@ backtrace = "0.3"
 config = "0.14"
 failure = "0.1"
 rand = "0.8"
-bytes = "1.7"
+bytes = "1.9"
 byteorder = "1.3"
 futures = "0.3"
 env_logger = "0.11"
-thiserror = "1.0"
+thiserror = "2.0"
 
-uuid = { version = "1.10", features = ["serde", "v4"] }
+uuid = { version = "1.11", features = ["serde", "v4"] }
 
 cadence = "1.5"
 slog = { version = "2.5", features = ["release_max_level_debug"] }
