--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,28 +1,28 @@
 [package]
 name = "channelserver"
-version = "1.2.1"
+version = "1.3.0"
 license = "MPL-2.0"
 authors = [
     "jr conlin<src+pairsona@jrconlin.com",
     "Phil Jenvey <pjenvey@underboss.org",
     "Donovan Preston <donovanpreston@gmail.com>",
 ]
-edition = "2021"
-rust-version = "1.76"
+edition = "2024"
+rust-version = "1.85"
 
 [dependencies]
 base64 = "0.22"
 backtrace = "0.3"
-config = "0.14"
+config = "0.15"
 failure = "0.1"
-rand = "0.8"
-bytes = "1.9"
+rand = "0.9"
+bytes = "1.10"
 byteorder = "1.3"
 futures = "0.3"
 env_logger = "0.11"
 thiserror = "2.0"
 
-uuid = { version = "1.11", features = ["serde", "v4"] }
+uuid = { version = "1.16", features = ["serde", "v4"] }
 
 cadence = "1.5"
 slog = { version = "2.5", features = ["release_max_level_debug"] }
@@ -38,15 +38,15 @@ serde_json = "1.0"
 
 actix-rt = "2.8"
 actix = "0.13"
-actix-web = "4.9"
+actix-web = "4.10"
 actix-web-actors = "4.3"
 actix-files = "0.6"
 
 reqwest = "0.12"
 openssl = "0.10"
 
-maxminddb = "0.24"
-ipnet = "2.10"
+maxminddb = { version = "0.26", features = ["mmap"] }
+ipnet = "2.11"
 
 #vuln
 smallvec = "^1"
